manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: yolo
  labels:
    name: yolo
