manifests/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yolo-backend
  namespace: yolo
spec:
  replicas: 3
  selector:
    matchLabels:
      app: yolo-backend
  template:
    metadata:
      labels:
        app: yolo-backend
    spec:
      containers:
        - name: yolo-backend
          image: docker.io/namanoo/naomi-yolo-backend:v1.0.1
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: yolo-backend
  namespace: yolo
spec:
  selector:
    app: yolo-backend
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: LoadBalancer
