manifests/mongo-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo
  namespace: yolo
spec:
  serviceName: mongo
  replicas: 3
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
        - name: mongo
          image: docker.io/namanoo/naomi-yolo-mongodb:v1.0.2
          imagePullPolicy: Always
          ports:
            - containerPort: 27017
          command:
            - "mongod"
            - "--replSet"
            - "rs0"
            - "--bind_ip_all"
          volumeMounts:
            - name: mongo-persistent-storage
              mountPath: /data/db
  volumeClaimTemplates:
    - metadata:
        name: mongo-persistent-storage
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: standard  
        resources:
          requests:
            storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: yolo
  labels:
    app: mongo 
spec:
  selector:
    app: mongo
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
  clusterIP: None   
  type: ClusterIP
